fix: parametriza CORS y alinea URLs de microservicios